objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AM_SFDC_Contact_Record_ID__c</fullName>
        <description>This field stores the AM SFDC ID of contact record</description>
        <externalId>true</externalId>
        <label>AM SFDC Contact Record ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASST__c</fullName>
        <description>Assessor Training</description>
        <label>ASST</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ability_tests_training_date__c</fullName>
        <description>Ability tests training date</description>
        <label>Ability Tests (OT)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Record_ID__c</fullName>
        <description>USed at the backend for Duplicate Rules</description>
        <label>Account Record ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advocacy_Level__c</fullName>
        <label>Advocacy Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>Champion</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Blocker</fullName>
                </value>
                <value>
                    <fullName>Strong</fullName>
                    <isActive>false</isActive>
                    <label>Strong</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_of_Interest__c</fullName>
        <description>Need to ensure that values amended in this field also need to be amended in the Area of Interest field on the Lead</description>
        <label>Area of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both TA &amp; TM</fullName>
                </value>
                <value>
                    <fullName>Contact Centre Hiring</fullName>
                </value>
                <value>
                    <fullName>Graduate and Early Careers</fullName>
                </value>
                <value>
                    <fullName>Interviewing</fullName>
                </value>
                <value>
                    <fullName>Leadership and Executive Hiring</fullName>
                </value>
                <value>
                    <fullName>Manager Hiring</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Hiring</fullName>
                </value>
                <value>
                    <fullName>Professional Hiring</fullName>
                </value>
                <value>
                    <fullName>Retail Hiring</fullName>
                </value>
                <value>
                    <fullName>Sales Hiring</fullName>
                </value>
                <value>
                    <fullName>Skills Development</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>Technology Hiring</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Volume Hiring</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Assessment Products</fullName>
                    <isActive>false</isActive>
                    <label>Assessment Products</label>
                </value>
                <value>
                    <fullName>Becoming a Candidate</fullName>
                    <isActive>false</isActive>
                    <label>Becoming a Candidate</label>
                </value>
                <value>
                    <fullName>Becoming a Partner</fullName>
                    <isActive>false</isActive>
                    <label>Becoming a Partner</label>
                </value>
                <value>
                    <fullName>Other </fullName>
                    <isActive>false</isActive>
                    <label>Other </label>
                </value>
                <value>
                    <fullName>Talent Acquisition</fullName>
                    <isActive>false</isActive>
                    <label>Talent Acquisition</label>
                </value>
                <value>
                    <fullName>Talent Acquisition - General</fullName>
                    <isActive>false</isActive>
                    <label>Talent Acquisition - General</label>
                </value>
                <value>
                    <fullName>Talent Acquisition - Grad</fullName>
                    <isActive>false</isActive>
                    <label>Talent Acquisition - Grad</label>
                </value>
                <value>
                    <fullName>Talent Acquisition - Managerial</fullName>
                    <isActive>false</isActive>
                    <label>Talent Acquisition - Managerial</label>
                </value>
                <value>
                    <fullName>Talent Acquisition - Manufacturing</fullName>
                    <isActive>false</isActive>
                    <label>Talent Acquisition - Manufacturing</label>
                </value>
                <value>
                    <fullName>Talent Acquisition - Professional</fullName>
                    <isActive>false</isActive>
                    <label>Talent Acquisition - Professional</label>
                </value>
                <value>
                    <fullName>Talent Acquisition - Professional/Managerial</fullName>
                    <isActive>false</isActive>
                    <label>Talent Acquisition - Professional/Managerial</label>
                </value>
                <value>
                    <fullName>Talent Acquisition - Retail</fullName>
                    <isActive>false</isActive>
                    <label>Talent Acquisition - Retail</label>
                </value>
                <value>
                    <fullName>Talent Acquisition - Sales</fullName>
                    <isActive>false</isActive>
                    <label>Talent Acquisition - Sales</label>
                </value>
                <value>
                    <fullName>Talent Acquisition - Skills Development</fullName>
                    <isActive>false</isActive>
                    <label>Talent Acquisition - Skills Development</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutomationBypassDateTime__c</fullName>
        <label>AutomationBypassDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BPOA__c</fullName>
        <description>Course added for South Africa. Previously called BPOA</description>
        <label>Client Workflow</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <formula>text(Account.BU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_ACV__c</fullName>
        <formula>AND(Account.Calculated_2024_Spend_YTD__c &lt; 1,  Account.Calculated_2025_Spend_YTD__c &lt; 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated ACV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Constant_Soft_Bounce_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Constant Soft Bounce Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Constant_Soft_Bounce_Domain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Constant Soft Bounce Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Persona__c</fullName>
        <label>Contact Persona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Centre of Excellence</fullName>
                </value>
                <value>
                    <fullName>Chief HR/Chief Talent/Chief People Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Talent Officer</fullName>
                </value>
                <value>
                    <fullName>CHRO/ CPO</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Functional Head / Manager</fullName>
                </value>
                <value>
                    <fullName>Head of Asmt COE</fullName>
                </value>
                <value>
                    <fullName>Head of Early Careers</fullName>
                </value>
                <value>
                    <fullName>Head of TA</fullName>
                </value>
                <value>
                    <fullName>Head of Talent Analytics/Marketplace</fullName>
                </value>
                <value>
                    <fullName>Head of TM</fullName>
                </value>
                <value>
                    <fullName>HRBP</fullName>
                </value>
                <value>
                    <fullName>L&amp;D Manager</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Skills Leader</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>IO Psychologist</fullName>
                    <isActive>false</isActive>
                    <label>IO Psychologist</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>To determine which of our contacts are the actual buyers and which can be marketed to and which we have lost contact with</description>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Left Institution</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Active-Invalid Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>To enable reports to be created to select any of the above options.</description>
        <inlineHelpText>Choose value(s) in order to reduce report list of appropriate contacts</inlineHelpText>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Integrator Contact</fullName>
                </value>
                <value>
                    <fullName>Lost Contact</fullName>
                </value>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>SAT Contact</fullName>
                </value>
                <value>
                    <fullName>Standard Contact</fullName>
                </value>
                <value>
                    <fullName>Technical Support Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <description>Date training completed for DM</description>
        <label>Decision Maker (DM)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact_Reason__c</fullName>
        <label>Do Not Contact Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Requested - no contact from anyone</fullName>
                </value>
                <value>
                    <fullName>Customer Requested - contact from Opportunity Owner only</fullName>
                </value>
                <value>
                    <fullName>Sales Requested - In Active Sales Cycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>replaces do not call</description>
        <inlineHelpText>Person cannot be contacted by email, phone, or marketing activity.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Double_Opted_In__c</fullName>
        <label>Double Opted In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Group_Subscription__c</fullName>
        <label>Email Group Subscription</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Newsletters</fullName>
                </value>
                <value>
                    <fullName>Service and Event</fullName>
                </value>
                <value>
                    <fullName>Event and Training</fullName>
                </value>
                <value>
                    <fullName>Products and Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box if contact specifically opts in to e-mails</description>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Opted_In__c</fullName>
        <inlineHelpText>Indicates if the contact has opted out of emails. Read only from Eloqua. No = Opted IN to emails. Contact by email is OK. Yes = Opted OUT of emails. Don’t contact by email. Blank = Not opted in to emails. Don’t contact by email in restricted countries.</inlineHelpText>
        <label>Unsubscribed from email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Subscription_Values__c</fullName>
        <label>Email Subscription Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Undeliverable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required by marketing to check validity of email address - visible only on global page</description>
        <label>Email Undeliverable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GCSC_Support_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GCSC Support Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Mailing_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Global_Country_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_Risk_Country__c</fullName>
        <description>High Risk Countries</description>
        <formula>AND(
NOT(ISBLANK(TEXT(Global_Mailing_Country__c))),		
CONTAINS(&quot;ARGENTINA:AUSTRIA:BULGARIA:CYPRUS:CZECH REPUBLIC:DENMARK:GREECE:ITALY:LIECHTENSTEIN:LITHUANIA:MALTA AND GOZO:ROMANIA:SPAIN:CHINA:ISRAEL&quot;,TEXT(Global_Mailing_Country__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Risk Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_in_Eloqua__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive in Eloqua</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insight_Work__c</fullName>
        <description>Date training completed for Insight@Work</description>
        <label>Insight@Work</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intergrity_INT__c</fullName>
        <description>Date field for Intergrity qualfication</description>
        <label>Intergrity (INT)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_training_date__c</fullName>
        <description>Interview training date</description>
        <label>Interview (CBI)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Ready_for_Transfer__c</fullName>
        <formula>AND(OR(AND( NOT(ISBLANK(Mailing_Address_Line_1__c)) ,NOT(ISBLANK( Mailing_City__c)),NOT(ISPICKVAL(Global_Mailing_Country__c , &apos;&apos;)),NOT(ISBLANK( Mailing_ZIP_Postal_Code__c))), Same_As_The_Account_Billing_Address__c = True ), Email &lt;&gt; Null, AccountId &lt;&gt; Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Ready for Transfer(System Use Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JACD__c</fullName>
        <label>JACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>Recruitment / Talent Acquisition</fullName>
                </value>
                <value>
                    <fullName>Graduate Recruitment</fullName>
                </value>
                <value>
                    <fullName>Learning &amp; Development / Training</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Customer Services / Call Centre</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Board of Directors / Trustees</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CXO</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Non-Managerial</fullName>
                </value>
                <value>
                    <fullName>Student/Academic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <description>Same list as website</description>
        <label>Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>CEO/MD</fullName>
                </value>
                <value>
                    <fullName>Graduate Recruitment Manager</fullName>
                </value>
                <value>
                    <fullName>HR Advisor/Officer</fullName>
                </value>
                <value>
                    <fullName>HR Consultant</fullName>
                </value>
                <value>
                    <fullName>HR Director - Country/site</fullName>
                </value>
                <value>
                    <fullName>HR Director - Global</fullName>
                </value>
                <value>
                    <fullName>HR Management - General</fullName>
                </value>
                <value>
                    <fullName>I/O Psychologist - independent</fullName>
                </value>
                <value>
                    <fullName>I/O Psychologist - in-house</fullName>
                </value>
                <value>
                    <fullName>Line Manager</fullName>
                </value>
                <value>
                    <fullName>Line Manager - Finance</fullName>
                </value>
                <value>
                    <fullName>Line Manager - General</fullName>
                </value>
                <value>
                    <fullName>Line Manager - IT</fullName>
                </value>
                <value>
                    <fullName>Line Manager - Sales</fullName>
                </value>
                <value>
                    <fullName>Performance Management</fullName>
                </value>
                <value>
                    <fullName>Psychometrist</fullName>
                </value>
                <value>
                    <fullName>Recruitment Manager</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Training/Development Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Activity_Happen__c</fullName>
        <label>Last Activity Happen</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MAS_training_date__c</fullName>
        <description>MAS training date</description>
        <label>A&amp;DC (MAS)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFS_training_date__c</fullName>
        <description>MFS training date</description>
        <label>MFS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQ_training_date__c</fullName>
        <description>MQ training date</description>
        <label>MQ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Country (not in use)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALDERNEY</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOWINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_State_County__c</fullName>
        <label>State/County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_ZIP_Postal_Code__c</fullName>
        <label>ZIP/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonHotCountryCheck__c</fullName>
        <description>Medium Risk Country and Rest of EU</description>
        <formula>AND(
NOT(ISBLANK(TEXT(Global_Mailing_Country__c))),
CONTAINS(&quot;AUSTRALIA:BELGIUM:CANADA:LUXEMBOURG:NETHERLANDS:NORWAY:POLAND:PORTUGAL:SLOVENIA:SWITZERLAND:SLOVAKIA (Slovak Republic):JAPAN:NEW ZEALAND:CROATIA:ESTONIA:FINLAND:FRANCE:HUNGARY:IRELAND:LATVIA:SWEDEN:UK:SOUTH AFRICA&quot;,TEXT(Global_Mailing_Country__c))
)</formula>
        <label>Medium Risk Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OAS_training_date__c</fullName>
        <description>OAS training date</description>
        <label>OAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OPQ_training_date__c</fullName>
        <description>OPQ trainining date</description>
        <label>OPQ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ORS_traininig_date__c</fullName>
        <description>ORS training date</description>
        <label>ORS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Output_Detail__c</fullName>
        <inlineHelpText>Contacts may meet several conditions that impact Marketing Permissibility. The system applies a hierarchy and shows the reason with the highest priority.</inlineHelpText>
        <label>Marketing Permissible Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personaility_Basics__c</fullName>
        <description>Training Course</description>
        <label>Personality Basics</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Email_Address_Domain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal Email Address Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Amber_Message__c</fullName>
        <formula>IF(ISPICKVAL(Account.BU__c,&apos;South Africa - ZA1&apos;),                               IF(AND(ISBLANK(OPQ_training_date__c),OR(NOT(ISBLANK(Test_admin_training_date__c)),NOT(ISBLANK(Ability_tests_training_date__c)))),&apos;May not Receive Profile Reports&apos; &amp; BR() &amp; &apos;May Administer Assessments&apos;,&apos;&apos;) ,
IF(AND(
OR(ISPICKVAL(Account.BU__c,&apos;UK - UK1&apos;),  ISPICKVAL(Account.BU__c,&apos;US - US1&apos;),  ISPICKVAL(Account.BU__c,&apos;Canada - CA1&apos;)),
NOT(INCLUDES(Qualifications__c,&apos;OPQ&apos;))),
&apos;Check Qualification&apos;,&apos;&apos;))</formula>
        <label>Phoenix Amber Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Green_Message__c</fullName>
        <formula>IF(ISPICKVAL(Account.BU__c,&apos;South Africa - ZA1&apos;),                               
IF(NOT(ISBLANK(OPQ_training_date__c)),&apos;May Receive Profile Reports&apos; &amp; BR() &amp; &apos;May Administer Assessments&apos;,&apos;&apos;),
IF(AND(
OR(ISPICKVAL(Account.BU__c,&apos;UK - UK1&apos;),  ISPICKVAL(Account.BU__c,&apos;US - US1&apos;),  ISPICKVAL(Account.BU__c,&apos;Canada - CA1&apos;)),
INCLUDES(Qualifications__c,&apos;OPQ&apos;)),
&apos;Qualification Is OPQ&apos;,&apos;Contact OK&apos;))</formula>
        <label>Phoenix Green Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Indicator__c</fullName>
        <formula>IMAGE( CASE(Phoenix_Status__c, 
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;Amber&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;/img/samples/light_green.gif&quot;), &apos;Phoenix Status&apos;)</formula>
        <inlineHelpText>For GCSC use only.</inlineHelpText>
        <label>Trading Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Message__c</fullName>
        <formula>IF(ISBLANK(Phoenix_Red_Message__c),IF(ISBLANK(Phoenix_Amber_Message__c), Phoenix_Green_Message__c,Phoenix_Amber_Message__c),Phoenix_Red_Message__c)</formula>
        <inlineHelpText>For GCSC use only.</inlineHelpText>
        <label>Trading Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Red_Message__c</fullName>
        <formula>IF(AND(ISPICKVAL(Account.BU__c,&apos;South Africa - ZA1&apos;),ISBLANK(Test_admin_training_date__c),ISBLANK(Ability_tests_training_date__c),ISBLANK(OPQ_training_date__c)),
&apos;May NOT Receive Profile Reports&apos; &amp; BR() &amp; &apos;May Not Administer Assessments&apos;,&apos;&apos;)</formula>
        <label>Phoenix Red Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <formula>IF(ISBLANK(Phoenix_Red_Message__c),IF(ISBLANK(Phoenix_Amber_Message__c), &apos;Green&apos;,&apos;Amber&apos;),&apos;Red&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phoenix Status</label>
        <type>Text</type>
    </fields>
</CustomObject>